--- a/symfony/app/config/security.yml
+++ b/symfony/app/config/security.yml
@@ -4,7 +4,6 @@ security:
 
     role_hierarchy:
         ROLE_ADMIN: [ROLE_USER]
-
     encoders:
         symfony\Component\Security\Core\User\User:
             algorithm: bcrypt
@@ -14,17 +13,17 @@ security:
     providers:
         chain_provider:
             chain:
-                providers: [ db_provider, in_memory ]
-        db_provider:
-            Entity:
-                class: AppBundle: User
-                property: name
+                providers: [ in_memory, our_db_provider ]
         in_memory:
             memory: 
                 users:
                     admin:
                         password: $2y$13$e9W3TjFZ0nT/hNMIq.c2l.9pyCCwV7AHnX22EntfJ3Uj0FAG3g502
                         roles: 'ROLE_ADMIN'
+        our_db_provider:
+            entity:
+                class: AppBundle:User
+                property: name
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -34,7 +33,7 @@ security:
 
         main:
             pattern: ^/
-            provider: in_memory
+            provider: chain_provider
             form_login:
                 login_path: login
                 check_path: login
